# docs/swagger.yaml
@@ -189,6 +189,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/common.ResponseError'
+      security:
+      - ApiKeyAuth: []
       summary: Create a new movie
       tags:
       - movies
@@ -222,6 +224,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/common.ResponseError'
+      security:
+      - ApiKeyAuth: []
       summary: Delete a movie by ID
       tags:
       - movies
@@ -292,6 +296,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/common.ResponseError'
+      security:
+      - ApiKeyAuth: []
       summary: Update a movie by ID
       tags:
       - movies
